# EVM_labs

lab1/: main.cpp
lab2/: lab2  lab2_0  lab2_1  lab2_2  lab2_3  lab2_fast  lab2_g  lab2_s  main.cpp  tests_lab2.txt
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: .result.txt.kate-swp  lab7_non_vector  lab7_vector_gcc  lab7_with_blas  main1.c  non_vector.c  result.txt  with_blas.c
lab8/: CMakeLists.txt  access_time_results.csv  lab8  main.cpp  plot_results.py
